# ECS36B

./: CMakeLists.txt
src/: Player.h  RandomAI.h
testing/: CMakeLists.txt  isMoveValid.cpp
